--- a/README
+++ b/README
@@ -1,3 +1,25 @@
-These files are part of gst-media-services, a project not yet workable.
+These files are part of gst-media-services, a project in alpha testing phase.
 
-To test it, you can run ui.py file. The other files are part of project or just for tests, which I will clear them at the workable release (alpha)
+****************************** Running project ******************************
+
+To test it, you can run ui.py file. You can also import gstms file, the project library, to do your conversions in python code.
+
+****************************** Missing features *****************************
+
+EncodingProfile:
+- Description of fields and format
+
+GSTMS lib:
+- Fix bug of 1sec pause between conversion construction and conversion play
+- try to find other raw conversions, currently there are only ffmpeg_colorspace and audioconvert
+- Correctly place file output and gets some confirmation in overwrite case 
+
+UI:
+- Overwrite prompt box;
+- Auto change conversion format based on input;
+- Handle conversion error;
+- Progress bar to conversions;
+- Block buttons transcode and remove when there are no files to convert;
+- Clear filelist box when conversion is finished;
+- Properties box
+- use hints!
